# OCServer

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  OCServer  OCServer-launcher.cmd  OCServer-launcher.sh  README.md
Core/: .cproject  Makefile
Core/src/: charutils.cpp  charutils.h  config.cpp  config.h  cryptoutils.cpp  cryptoutils.h  debug.cpp  debug.h  evt_tls.cpp  evt_tls.h  export.h  jImpl.cpp  jImpl.h  jni.cpp  mfilesystem.cpp  mfilesystem.h  org_gtdev_oc_server_JNInterface.h  proto.cpp  proto.h  queue.h  tea.cpp  tea.h  util.cpp  util.h  wdirent.h  wjni.h  xxtea.cpp  xxtea.h
Core/tests/: Java  Makefile  OCSTest-launcher.cmd  OCSTest-launcher.sh  crypt_test.cpp  evt_test.cpp  java_test.cpp  modules  proto_test.cpp  server-cert.crt  server-key.key  test_main.cpp
Java/: Makefile  OCDatabase.db.orig  sqlite.sql
Java/src/org/gtdev/oc/server/: Base64.java  JNInterface.java  Log.java  LoginApp.java  MD5.java
Java/src/org/gtdev/oc/server/channel/: AppPort.java  BaseRemoteCommand.java
Java/src/org/gtdev/oc/server/database/: AccountMgrImpl.java  Database.java
Java/src/org/gtdev/oc/server/protocol/: ProtoDisplayer.java  ProtoInputStream.java  ProtoOutputStream.java  ProtoStruct.java  Utils.java
Java/src/org/gtdev/oc/server/services/: GameSvc.java  LoginSvc.java
Java/src/test/: ProtoTest.java  TestDatabase.java  TestJNICpp.java  TestLog.java  TestLogin.java
doxygen_doc/: doxygen_conf
src/: FromMsg.cpp  FromMsg.h  PacketSync.cpp  PacketSync.h  ToMsg.cpp  ToMsg.h  ev_dispatch.cpp  ev_dispatch.h  gameproto.cpp  gameproto.h  javabr.h  main.cpp  net_base.h  org_gtdev_oc_server_JNInterface.h  tcpprotocol.h  uv_net.cpp  uv_net.h
visualcpp/: OCServer-Core.vcxproj  OCServer-Core.vcxproj.filters  OCServer-launcher.vcxproj  OCServer-launcher.vcxproj.filters  OCServer.sln
